# sloth-lang

./: .gitignore  Cargo.toml  LICENSE  README.md  TODO.md  test.slt  test_module.slt
benches/: fib_bench.rs
sloth/sloth_examples/: bf_progs.bf  brainfk.slt  game_of_life.slt  snake.slt
sloth/sloth_lib/: func_tool.slt  utils.slt
src/: compiler.rs  draw.rs  extension_methods.rs  fiber.rs  interned_string.rs  lib.rs  main.rs  math.rs  native.rs  vec.rs  vm.rs
src/compiler/: parser.rs  scanner.rs
tests/: ffi.c  fib.py  raylib_test.rs  sloth_lib.rs  weak_test.rs
