[package]
name = "sloth-lang-core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.0.14", features = ["derive"] }

[dev-dependencies]
criterion = "0.3" 

[[bench]]
name = "fib_bench"
harness = false